# loon

./: .gitignore  AGENTS.md  Cargo.toml  README.md  build  config.example.toml  nest-app.toml
.cargo/: config.toml
.cursor/rules/: webos-tv-knowledge.mdc
.github/workflows/: ci.yml
client/: .env.example  .gitignore  COMPONENTS.md  FOCUS.md  README.md  SCREENS.md  TECH.md  W0-SPIKE.md  appinfo.json  index.html  package-lock.json  package.json  vite.config.ts
client/docs/: 01-overview.md  02-components.md  03-pages.md  04-api-client.md  05-platform.md  README.md
client/scripts/: fix-simulator-path.mjs  launch-simulator.mjs  prepare-webos-package.mjs  start-simulator.mjs  webos-simulator.sh
client/src/: App.module.css  App.tsx  config.test.ts  config.ts  main.tsx  vite-env.d.ts
client/src/api/: client.test.ts  client.ts  normalize.test.ts  normalize.ts  sse.test.ts  sse.ts  types.ts
client/src/components/: ContentRow.module.css  ContentRow.tsx  ErrorBoundary.tsx  ErrorFallback.module.css  ErrorFallback.tsx  FocusButton.module.css  FocusButton.tsx  GlobalErrorShell.tsx  HorizontalRow.module.css  HorizontalRow.tsx  MovieAlphabetList.module.css  MovieAlphabetList.tsx  MovieVerticalList.module.css  MovieVerticalList.tsx  PosterCard.module.css  PosterCard.tsx
client/src/components/layout/: AppShell.module.css  AppShell.tsx  TopBar.module.css  TopBar.tsx
client/src/pages/: AdminPage.module.css  AdminPage.tsx  AdminSettingsTab.tsx  FavoritesPage.tsx  GenresPage.tsx  MovieDetailPage.module.css  MovieDetailPage.tsx  MovieEditPage.module.css  MovieEditPage.tsx  MovieFileDetails.tsx  MoviesPage.tsx  PersonPage.module.css  PersonPage.tsx  PlayerPage.tsx  SearchPage.tsx  page.module.css
client/src/platform/: keyboard.test.ts  keyboard.ts  useWebOsBack.ts  useWebOsLifecycle.ts  webos.ts
client/src/player/: VideoPlayer.module.css  VideoPlayer.tsx
client/src/theme/: tokens.css
client/src/utils/: alphabet.test.ts  alphabet.ts  format.test.ts  format.ts  scanLog.ts
deploy/: config.example.toml  env.example  loon.service
desktop/: .gitignore  Cargo.toml  README.md  build  config.example.toml
desktop/.cargo/: config.toml
desktop/crates/loon-admin/: Cargo.toml
desktop/crates/loon-admin/src/: config.rs  main.rs  module.rs  view.rs
desktop/crates/loon-admin/src/api/: client.rs  mod.rs  types.rs
desktop/crates/loon-egui-theme/: Cargo.toml
desktop/crates/loon-egui-theme/src/: adapter.rs  lib.rs  themes.rs
desktop/crates/loon-player/: Cargo.toml
desktop/crates/loon-player/src/: lib.rs
desktop/docs/: 01-overview.md  02-rust-backend.md  03-react-frontend.md  04-components.md  05-api-reference.md  06-configuration.md  README.md  v1.md
desktop/src-tauri/: .taurignore  Cargo.toml  build.rs  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/logs/: loon-admin
desktop/src-tauri/src/: commands.rs  config.rs  config_host.rs  main.rs
desktop/themes/: loon-dark.toml
desktop/ui/: index.html  package-lock.json  package.json  player.html  tailwind.config.ts  vite.config.ts
desktop/ui/src/: App.tsx  PlayerApp.tsx  index.css  player-main.tsx
desktop/ui/src/components/: AppShell.tsx  LibraryPanel.tsx  MovieDetail.tsx  MovieTable.tsx  ScanPanel.tsx  SettingsPanel.tsx  TmdbEditDialog.tsx  WindowControls.tsx
desktop/ui/src/hooks/: useApi.ts  useScan.ts
desktop/ui/src/lib/: api.ts  config.ts  player.ts  tauri.ts
desktop/ui/src/types/: index.ts
docs/: README.md  api-roadmap.md  api-v0.2.md  api.md  data-v1.md  implementation-v1.md  repo-v1.md  setup-v1.md  v1.md  webos-knowledge-v1.md  webos-test-checklist.md  webos-v1.md
scripts/: e2e-enrichment-live.sh  install-service.sh
server/: Cargo.toml
server/docs/: 01-overview.md  02-api-reference.md  03-services.md  04-database.md  05-models.md  06-configuration.md  README.md
server/migrations/: 001_initial.sql  002_tmdb_locked.sql  003_people.sql
server/src/: error.rs  lib.rs  logging.rs  main.rs  state.rs
server/src/api/: artwork.rs  browse.rs  favorites.rs  genres.rs  health.rs  library.rs  match_handler.rs  mod.rs  movies.rs  people.rs  progress.rs  root.rs  search.rs  stream.rs
server/src/config/: cache.rs  mod.rs
server/src/db/: migrations.rs  mod.rs  repository.rs
server/src/models/: browse.rs  library.rs  mod.rs  movie.rs  person.rs  root.rs
server/src/services/: ai.rs  artwork.rs  browse.rs  cast_backfill.rs  catalog.rs  enrichment.rs  filename_guess.rs  library.rs  media_file.rs  mod.rs  person.rs  scan_events.rs  scan_service.rs  scan_state.rs  slug.rs  streaming.rs  tmdb.rs  tmdb_match.rs
server/tests/: api.rs  artwork.rs  enrichment_e2e.rs
server/tests/fixtures/: config.toml
