[workspace]
resolver = "2"
members = ["server"]

[workspace.package]
edition = "2021"
rust-version = "1.75"
license = "MIT OR Apache-2.0"
repository = "https://github.com/pacificnm/loon"

[workspace.dependencies]
nest-http-serve = { git = "https://github.com/pacificnm/nest", branch = "main" }
nest-config = { git = "https://github.com/pacificnm/nest", branch = "main" }
nest-error = { git = "https://github.com/pacificnm/nest", branch = "main" }
nest-file = { git = "https://github.com/pacificnm/nest", branch = "main" }
nest-media-library = { git = "https://github.com/pacificnm/nest", branch = "main" }
nest-tmdb = { git = "https://github.com/pacificnm/nest", branch = "main" }
nest-ai = { git = "https://github.com/pacificnm/nest", branch = "main" }
nest-ai-ollama = { git = "https://github.com/pacificnm/nest", branch = "main" }
nest-http-client = { git = "https://github.com/pacificnm/nest", branch = "main" }
nest-http = { git = "https://github.com/pacificnm/nest", branch = "main" }
nest-media = { git = "https://github.com/pacificnm/nest", branch = "main" }
nest-data = { git = "https://github.com/pacificnm/nest", branch = "main" }
nest-data-sqlite = { git = "https://github.com/pacificnm/nest", branch = "main" }
nest-logging = { git = "https://github.com/pacificnm/nest", branch = "main" }
nest-cache = { git = "https://github.com/pacificnm/nest", branch = "main" }
nest-cache-file = { git = "https://github.com/pacificnm/nest", branch = "main" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
clap = { version = "4", features = ["derive"] }

[patch."https://github.com/pacificnm/nest"]
nest-http-serve = { path = "../../core/crates/nest-http-serve" }
nest-config = { path = "../../core/crates/nest-config" }
nest-error = { path = "../../core/crates/nest-error" }
nest-file = { path = "../../core/crates/nest-file" }
nest-media-library = { path = "../../modules/crates/nest-media-library" }
nest-tmdb = { path = "../../modules/crates/nest-tmdb" }
nest-http-client = { path = "../../core/crates/nest-http-client" }
nest-http = { path = "../../core/crates/nest-http" }
nest-media = { path = "../../core/crates/nest-media" }
nest-data = { path = "../../core/crates/nest-data" }
nest-data-sqlite = { path = "../../modules/crates/nest-data-sqlite" }
nest-ai = { path = "../../core/crates/nest-ai" }
nest-ai-ollama = { path = "../../modules/crates/nest-ai-ollama" }
nest-logging = { path = "../../core/crates/nest-logging" }
nest-cache = { path = "../../core/crates/nest-cache" }
nest-cache-file = { path = "../../modules/crates/nest-cache-file" }
