[workspace]
resolver = "2"
members = [
    "src-tauri",
]

[workspace.package]
edition = "2021"
rust-version = "1.75"
license = "MIT OR Apache-2.0"
repository = "https://github.com/pacificnm/loon"

[workspace.dependencies]
nest-cache = { git = "https://github.com/pacificnm/nest", branch = "main" }
nest-cache-file = { git = "https://github.com/pacificnm/nest", branch = "main" }
nest-config = { git = "https://github.com/pacificnm/nest", branch = "main" }
nest-error = { git = "https://github.com/pacificnm/nest", branch = "main" }
nest-image = { git = "https://github.com/pacificnm/nest", branch = "main" }
nest-tauri = { git = "https://github.com/pacificnm/nest", branch = "main" }
nest-theme = { git = "https://github.com/pacificnm/nest", branch = "main" }
tauri = { version = "2" }
tracing = "0.1"
