[workspace]
resolver = "2"
members = [
    "src-tauri",
    "crates/loon-player",
]

[workspace.package]
edition = "2021"
rust-version = "1.75"
license = "MIT OR Apache-2.0"
repository = "https://github.com/pacificnm/loon"

[workspace.dependencies]
nest-config = { git = "https://github.com/pacificnm/nest", branch = "main" }
nest-error = { git = "https://github.com/pacificnm/nest", branch = "main" }
nest-tauri = { git = "https://github.com/pacificnm/nest", branch = "main" }
nest-theme = { git = "https://github.com/pacificnm/nest", branch = "main" }
loon-player = { path = "crates/loon-player" }
tauri = { version = "2" }
tracing = "0.1"
