[package]
name = "loon-egui-theme"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Loon admin egui theme adapter (nest-theme → egui::Visuals)"

[dependencies]
egui = { workspace = true }
nest-design = { workspace = true }
nest-error = { workspace = true }
nest-theme = { workspace = true }

[dev-dependencies]
